[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Trap.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "TrapSpikes"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Spikes:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.7, 0 ) ]
}

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 0.3, 1 )

[sub_resource type="PrismMesh" id=3]
size = Vector3( 0.5, 1, 0.25 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_color = Color( 0.631373, 0.0235294, 0.0235294, 0.454902 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )

[node name="Area" type="Area"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/TrapSpikes = SubResource( 1 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StayTime" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0 )
shape = SubResource( 2 )

[node name="Spikes" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.517879, -1.59433, 0.635368 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.517879, -1.59433, -0.0474812 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.517879, -1.59433, -0.726506 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.482121, -1.59433, 0.635368 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance5" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.482121, -1.59433, -0.0474812 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance6" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.482121, -1.59433, -0.726506 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance7" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0019151, -1.59433, 0.635368 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance8" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0019151, -1.59433, -0.0474812 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance9" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0019151, -1.59433, -0.726506 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance10" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02737, -1.59433, 0.635368 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance11" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02737, -1.59433, -0.0474812 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance12" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02737, -1.59433, -0.726506 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance13" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.992456, -1.59433, 0.635368 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance14" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.992456, -1.59433, -0.0474812 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance15" type="MeshInstance" parent="Spikes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.992456, -1.59433, -0.726506 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = SubResource( 5 )
material/0 = null
[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="StayTime" to="." method="_on_StayTime_timeout"]
